--- a/other.html
+++ b/other.html
@@ -12,7 +12,7 @@
         <form><!-- a wrapper for the calculator -->
             
             <!-- the calculator's "screen" -->
-            <div><output name="out" id="out">0</output></div>
+            <output name="out" id="out">0</output>
             
                  <div>
                     <input type="button" value="7" class="number"/>
