about to switch to ems; setting checkpoint

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- the calculator's "screen" -->
             <output name="out" id="out">0</output>
             
-            <div><!-- The number field. -->
+            <div id="numField"><!-- The number field. -->
                 <div>
                     <input type="button" value="7" class="number"/>
                     <input type="button" value="8" class="number"/>
@@ -36,7 +36,7 @@
                 <div>
                     <input type="button" value="C" id="clear"/>
                     <input type="button" value="0" class="number"/>
-                    <input type="button" value="=" class="operator"/>
+                    <input type="button" value="=" class="operator" id="equals"/>
                 </div>
                 
             </div><!-- end number field -->
