--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>Calculator</title>
+        
+        <link rel="stylesheet" type="text/css" href="reset.css"/>
         <link rel="stylesheet" type="text/css" href="style.css"/>    
     </head>
     
