Added decimals Removed bogus getByClass definition Parse numbers only just before evaluation

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div>
                     <input type="button" value="C" id="clear"/>
                     <input type="button" value="0" class="number"/>
+                    <input type="button" value="." class="number"/>
                     <input type="button" value="=" class="operator" id="equals"/>
                 </div>
                 
