--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Calculator</title>
         
         <link rel="stylesheet" type="text/css" href="reset.css"/>
-        <link rel="stylesheet" type="text/css" href="style2.css"/>    
+        <link rel="stylesheet" type="text/css" href="style.css"/>    
     </head>
     
     <body>
