changed title tag

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 email me at: maxvgc@gmail.com
 -->
 		
-		<title>Calculator</title>
+		<title>Abacus For The Rest Of Us</title>
 		
 		<link rel="stylesheet" type="text/css" href="reset.css" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
