the media query based on width is more trouble than it is worth

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ email me at: maxvgc@gmail.com
 
 	<body>
 	
-		<form id="abacusFTROU">
+		<form>
 			<!-- a wrapper for the calculator -->
 	
 			<!-- the calculator's "screen" -->
