--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 
 email me at: maxvgc@gmail.com
+source code: https://github.com/maxvgc/abacus-for-the-rest-of-us
 -->
 		
 		<title>Abacus For The Rest Of Us</title>
