moved some files around and working on qUnit

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ source code: https://github.com/maxvgc/abacus-for-the-rest-of-us
 		
 		<title>Abacus For The Rest Of Us</title>
 		
-		<link rel="stylesheet" type="text/css" href="reset.css" />
-		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="stylesheet" type="text/css" href="/css/reset.css" />
+		<link rel="stylesheet" type="text/css" href="/css/style.css" />
 	</head>
 
 	<body>
@@ -75,7 +75,8 @@ source code: https://github.com/maxvgc/abacus-for-the-rest-of-us
 		</form>
 		<!-- end calculator -->
 	
-		<script type="text/javascript" src="script.js"></script>
+		<script type="text/javascript" src="/js/calculator.js"></script>
+		<script type="text/javascript" src="/js/setup.js"></script>
 	
 	</body>
 </html>
