--- a/testing/testing.html
+++ b/testing/testing.html
@@ -3,15 +3,17 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>my test suite</title>
-		<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css">
+		<!--<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css">-->
+		<link rel="stylesheet" href="qunit.css">
 	</head>
 	
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
 		
-		<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
-		<script src="../script.js"></script>
-		<!--<script src="tests.js"></script>-->
+		<!--<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>-->
+		<script src="qunit.js"></script>
+		<script src="../js/calculator.js"></script>
+		<script src="myTests.js"></script>
 	</body>
 </html>
