finished testing. cleaning up some files for final push

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -2,17 +2,35 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+<!--
+This file is part of Abacus For The Rest Of Us
+Copyright (C) 2013 Max Galloway-Carson
+
+Abacus For The Rest Of Us is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU Affero General Public License for more details.
+
+You should have received a copy of the GNU Affero General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+email me at: maxvgc@gmail.com
+source code: https://github.com/maxvgc/abacus-for-the-rest-of-us
+-->		
 		<title>my test suite</title>
-		<!--<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css">-->
-		<link rel="stylesheet" href="qunit.css">
+		<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css">
 	</head>
 	
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
 		
-		<!--<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>-->
-		<script src="qunit.js"></script>
+		<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
 		<script src="../js/calculator.js"></script>
 		<script src="myTests.js"></script>
 	</body>
