manage qunit library with bower

--- a/testing/testing.html
+++ b/testing/testing.html
@@ -23,15 +23,15 @@ email me at: webmaster@pwipw.com
 source code: https://github.com/maxgalloway/Abacus_for_the_Rest_of_Us
 -->		
 		<title>my test suite</title>
-		<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.11.0.css">
+		<link rel="stylesheet" href="/assets/bower_components/qunit/qunit/qunit.css">
 	</head>
 	
 	<body>
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
 		
-		<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
-		<script src="../js/calculator.js"></script>
-		<script src="myTests.js"></script>
+		<script src="/assets/bower_components/qunit/qunit/qunit.js"></script>
+		<script src="/assets/js/calculator.js"></script>
+		<script src="/testing/myTests.js"></script>
 	</body>
 </html>
