--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ source code: https://github.com/maxgalloway/Abacus_for_the_Rest_of_Us
 -->
 		<title>Abacus For The Rest Of Us</title>
 
-        <link rel="stylesheet" type="text/css" href="/assets/bower_components/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
 
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
     </head>
@@ -130,8 +130,8 @@ source code: https://github.com/maxgalloway/Abacus_for_the_Rest_of_Us
 	
 		</form>
 		<!-- end calculator -->
-        <script type="text/javascript" src="/assets/bower_components/jquery/dist/jquery.js"></script>
-        <script type="text/javascript" src="/assets/bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <script type="text/javascript" src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="/assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 		<script type="text/javascript" src="/assets/js/calculator.js"></script>
 		<script type="text/javascript" src="/assets/js/setup.js"></script>
