--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@ email me at: webmaster@pwipw.com
 source code: https://github.com/maxgalloway/Abacus_for_the_Rest_of_Us
 -->
 		<title>Abacus For The Rest Of Us</title>
-
+        <link rel="shortcut icon" href="/assets/img/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-
         <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
     </head>
 
